# legate.numpy

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  cunumeric_cpp.cmake  cunumeric_python.cmake  cupynumeric_cpp.cmake  cupynumeric_python.cmake  index.html  install.py  pyproject.toml  setup.cfg  setup.py  test.py  versioneer.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci-gh-nightly-release.yml  ci-gh-release.yml  ci-gh-validate-legate-sha.yml  ci-gh.yml  gh-build-and-test.yml  gh-build.yml  gh-test-within-container.yml  gh-test.yml  merge-branches.sh  merge-ci.yml  require-labels.yml
cmake/: generate_install_info_py.cmake  versions.json
cmake/Modules/: cpm_helpers.cmake  cuda_arch_helpers.cmake  set_cpu_arch_flags.cmake
conda/conda-build/: build.sh  conda_build_config.yaml  meta.yaml
continuous_integration/scripts/: build  build-cunumeric  build-cunumeric-conda  build-cunumeric-cpp  build-cunumeric-wheel  build-cupynumeric-conda  build-cupynumeric-cpp  build-cupynumeric-wheel  conda-utils  entrypoint  make-conda-env  setup-utils  test  test-cunumeric  vault-s3-init
cunumeric/: __init__.py  _sort.py  array.py  bits.py  config.py  coverage.py  deferred.py  eager.py  install_info.py.in  logic.py  module.py  numba_utils.py  patch.py  runtime.py  settings.py  sort.py  thunk.py  types.py  utils.py  window.py
cunumeric/_array/: array.py  flags.py  thunk.py  util.py
cunumeric/_module/: __init__.py  _unary_red_utils.py  array_basic.py  array_dimension.py  array_joining.py  array_rearrange.py  array_shape.py  array_splitting.py  array_tiling.py  array_transpose.py  binary_bit_packing.py  creation_data.py  creation_matrices.py  creation_ranges.py  creation_shape.py  indexing.py  io_numpy.py  linalg_mvp.py  logic_array_contents.py  logic_array_type.py  logic_comparison.py  logic_truth.py  math_complex.py  math_extrema.py  math_misc.py  math_sum_prod_diff.py  sets_making.py  ssc_counting.py  ssc_searching.py  ssc_sorting.py  stats_avgs_vars.py  stats_histograms.py  stats_order.py  window.py
cunumeric/_sphinxext/: _comparison_config.py  _comparison_util.py  _cunumeric_directive.py  comparison_table.py  implemented_index.py  missing_refs.py  ufunc_formatter.py
cunumeric/_thunk/: _sort.py  deferred.py  eager.py  thunk.py
cunumeric/_ufunc/: bit_twiddling.py  comparison.py  floating.py  math.py  trigonometric.py  ufunc.py
cunumeric/_utils/: array.py  coverage.py  linalg.py  stack.py  structure.py
cunumeric/fft/: __init__.py  fft.py
cunumeric/linalg/: __init__.py  _cholesky.py  _qr.py  _solve.py  _svd.py  cholesky.py  linalg.py  solve.py
cunumeric/ma/: __init__.py  _masked_array.py
cunumeric/random/: __init__.py  _bitgenerator.py  _generator.py  _legacy.py  _random.py  bitgenerator.py
cupynumeric/: __init__.py  config.py  install_info.py.in  runtime.py
cupynumeric/_array/: array.py
cupynumeric/_module/: creation_ranges.py
cupynumeric/_sphinxext/: _comparison_util.py
cupynumeric/_thunk/: deferred.py  eager.py  thunk.py
cupynumeric/_ufunc/: ufunc.py
cupynumeric/_utils/: __init__.py  array.py  coverage.py
cupynumeric/fft/: fft.py
cupynumeric/linalg/: linalg.py
cupynumeric/random/: _bitgenerator.py  _generator.py
docs/cunumeric/: Makefile  switcher.json
docs/cupynumeric/: Makefile  switcher.json
examples/: benchmark.py  black_scholes.py  black_scholes_greeks.py  cg.py  cholesky.py  einsum.py  gemm.py  indexing_routines.py  jacobi.py  kmeans.py  kmeans_slow.py  linreg.py  logreg.py  lstm_backward.py  lstm_forward.py  qr.py  quantiles.py  richardson_lucy.py  scan.py  solve.py  sort.py  stencil.py  svd.py
examples/cpp/stencil/: CMakeLists.txt  build.sh  editable-install.sh  stencil.cc
scripts/: api_compare.py  conda-build.sh
scripts/hooks/: enforce_boilerplate.py  legate_defined.sh
src/: arg.cc  cunumeric.h  cunumeric.mk  env_defaults.h  mapper.cc  mapper.h  numpy.cc  numpy.h  numpy.mk  pitches.h  runtime.cc
src/binary/: binary_op.h  binary_op_util.h  binary_red.h
src/cunumeric/: arg.cc  arg.h  arg.inl  arg_redop_register.cc  arg_redop_register.cu  arg_redop_register.h  array.cc  array.h  array.inl  cuda_help.h  cudalibs.cu  cudalibs.h  cunumeric.cc  cunumeric.cu  cunumeric_c.h  cunumeric_task.h  device_scalar_reduction_buffer.h  divmod.h  mapper.cc  mapper.h  ndarray.cc  ndarray.h  ndarray.inl  omp_help.h  operators.cc  operators.h  operators.inl  pitches.h  runtime.cc  runtime.h  slice.h  typedefs.h
src/cupynumeric/: arg.h  arg.inl  arg_redop_register.cc  arg_redop_register.cu  arg_redop_register.h  cuda_help.h  cudalibs.cu  cudalibs.h  cupynumeric.cc  cupynumeric.cu  cupynumeric_c.h  cupynumeric_task.h  device_scalar_reduction_buffer.h  divmod.h  mapper.cc  mapper.h  ndarray.cc  ndarray.h  omp_help.h  operators.cc  operators.h  pitches.h  runtime.cc  runtime.h
src/item/: read.h  write.h
src/matrix/: diag.h  dot.h  matmul.h  matvecmul.h  tile.h  transpose.h
src/nullary/: arange.h  eye.h  fill.h
src/numpy/: arg.cc  array.cc  array.h  array.inl  mapper.cc  mapper.h  numpy.cc  numpy.cu  numpy_task.h  operators.cc  operators.h  runtime.cc  runtime.h
src/random/: rand.h  rand_util.h
src/search/: nonzero.h
src/stat/: bincount.h
src/ternary/: where.h
src/unary/: convert.h  convert_util.h  scalar_unary_red.h  unary_op.h  unary_op_util.h  unary_red.h  unary_red_util.h
tests/cpp/: CMakeLists.txt  build.sh  main.cc  run.py  run.sh
tests/cpp/integration/: common_utils.cc  common_utils.h  test_amax.cc  test_amin.cc  test_arange.cc  test_argsort.cc  test_argwhere.cc  test_bincount.cc  test_convolve.cc  test_diagonal.cc  test_dot.cc  test_eye.cc  test_fill.cc  test_flip.cc  test_logical.cc  test_moveaxis.cc  test_msort.cc  test_nonzero.cc  test_put.cc  test_repartition.cc  test_repeat.cc  test_reshape.cc  test_sort.cc  test_sort_complex.cc  test_squeeze.cc  test_swapaxes.cc  test_transpose.cc  test_trilu.cc  test_unique.cc  test_where.cc  test_window.cc  test_zeros.cc  util.inl
(+1088 files in other folders)
